Add theme to vcs :part_alternation_mark:

--- a/_config.artemis.yml
+++ b/_config.artemis.yml
@@ -1,7 +1,7 @@
 menu:
   Home: /
   # Archives: /archives
-  GitHub: https://github.com/bmwant
+  GitHub: https://github.com/bmwant/bmwlog-static
   RSS: /atom.xml
 
 
