Add shell deployment for hexo :yum:

--- a/_config.yml
+++ b/_config.yml
@@ -101,4 +101,5 @@ theme: artemis
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: shell
+  command: firebase deploy --only hosting
