--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,15 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "i18n": {
+      "root": "/localized-files"
+    }
+  },
+  "emulators": {
+    "hosting": {
+      "host": "0.0.0.0",
+      "port": 5050
+    }
   }
 }
